feature : add tests for all endpoints